# github_test1

./: LICENSE  index.html
test/: README.md  conftest.py  pyproject.toml  pytest.ini  server_config.ini  utils.py
test/common/fixture/: text_type_fixture.py
test/common/ui/: common.py
test/login/test/: test_login_01_0010.py  test_login_01_0030.py  test_login_01_0040.py  test_login_01_0050.py  test_login_01_0060.py  test_login_02_0010.py
test/login/ui/: elements.py
test/mypage/test/: test_mypage_01_0040.py  test_mypage_01_0050.py  test_mypage_01_0090.py  test_mypage_01_0100.py  test_mypage_01_0200.py  test_mypage_01_0210.py  test_mypage_01_0220.py  tset_mypage_01_0030.py
test/mypage/ui/: edit_info.py  my_task_list.py
test/project/test/: test_projcet_02_0150.py  test_project_01_0030.py  test_project_01_0040.py  test_project_01_0050.py  test_project_02_0060.py  test_project_02_0090.py  test_project_02_0130.py  test_project_02_0140.py  test_project_02_0200.py  test_project_02_0230.py  test_project_02_0260.py  test_project_02_0300.py  test_project_02_0330.py  test_project_05_0060.py  test_project_05_0070.py  test_project_05_0110.py  test_project_05_0140.py  test_project_05_0160.py  test_project_05_0180.py  test_project_05_0190.py  test_project_05_0200.py  test_project_05_0250.py  test_project_05_0280.py
test/project/ui/: alert_message.py  assignment_log.py  assignment_modal.py  create_project.py  data_picker.py  delete_project.py  project_list.py  project_task.py  (+3 more)
test/utils/: assert_wait.py  config.py  initial_values.py  server_config.py  test_util.py
(+30 files in other folders)
